# SlauSolver

./: .gitmodules
SlauSolver/: CMakeLists.txt
qtproject/: CMakeLists.txt  dbmanager.cpp  dbmanager.h  loginwindow.cpp  loginwindow.h  mainwindow.cpp  mainwindow.h
